单片机编程环境搭建与简单jiaoxue

--- a/_posts/2017-12-13-手把手教你搭建STC51单片机编程环境.md
+++ b/_posts/2017-12-13-手把手教你搭建STC51单片机编程环境.md
@@ -14,16 +14,20 @@
  
  - **软件简介**
 如图一为[Dev-C++][2]，Dev-C++是一款C/C++编译软件，当然如果你使用其他的编译软件也没有问题。
-如图二为[keil_v5][3]，keil_v5是第五代keil软件，他支持用C语言编译输入单片机的程序，单片机其实不认识C语言，C语言仅为一个人与单片机之间沟通的一个中间语言，单片机只认识[汇编语言][4]，而keil则可以将C语言转化为汇编语言，一般汇编语言文件后缀为为".hex"。
+![图二][3]
+如图二为[keil_v5][4]，keil_v5是第五代keil软件，他支持用C语言编译输入单片机的程序，单片机其实不认识C语言，C语言仅为一个人与单片机之间沟通的一个中间语言，单片机只认识[汇编语言][5]，而keil则可以将C语言转化为汇编语言，一般汇编语言文件后缀为为".hex"。
+![图二][6]
 如图三为stc-isp，是一款烧录软件，负责将编译好的汇编语言文件烧录进单片机芯片，也就是将后缀为".hex"的文件写入单片机。
+![此处输入图片的描述][7]
 
 
 
 # - **简单使用**
 下面我将交大家用keil编译一个简单程序(点亮一个LED灯)并烧录进自己的STC51单片机里面作为keil和stc-isp使用教程
-###1.首先找到自己单片机的引脚连接方式，如图，我的单片机的P1引脚连接着8个LED灯
+##1.首先找到自己单片机的引脚连接方式，如图，我的单片机的P1引脚连接着8个LED灯
+![此处输入图片的描述][8]
   
-### 2.新建一个C语言文件并键入以下程序
+## 2.新建一个C语言文件并键入以下程序
   
 ```python
 //头文件名，<reg52.h>为stc51单片机的函数库头文件名
@@ -36,20 +40,69 @@ void main()
 	LED1=0;//给LED1，也就是P1^0引脚输入一个低电平，LED1被点亮
 }
 ```
-###  3.新建一个文件夹并把编好的C程序放进去，然后打开keil完成以下操作
+##  3.新建一个文件夹并把编好的C程序放进去，然后打开keil完成以下操作
+###第一步：新建工程项目到刚才的文件夹
+![此处输入图片的描述][9]
+![此处输入图片的描述][10]
+###第二步：选择芯片语言为Atmel的89C52
+![此处输入图片的描述][11]
+-
+![此处输入图片的描述][12]
+###此时若出现如图情况点“否”
+![此处输入图片的描述][13]
+###添加C语言文件
+双击SourceGroup1
+![此处输入图片的描述][14]
+-
+添加刚编译好的C语言文件
+![此处输入图片的描述][15]
+-
+得到
+![此处输入图片的描述][16]
+###生成汇编语言文件
+点击工程文件设置
+![此处输入图片的描述][17]
+-
+点击输出，和生成HEX文件
+![此处输入图片的描述][18]
+-
+点击调试并编译
+![此处输入图片的描述][19]
+-
+看下方的编译结果区会有"creating hex file"即为成功生成，不成功再次查看原因重新编译
+![此处输入图片的描述][20]
+##4.将你的单片机连接到电脑，再执行以下操作  
+###找到hex文件一般在OBjects文件夹里
+![此处输入图片的描述][21]
+###打开烧录软件，连接单片机上电，端口会自动识别
+打开程序文件，即打开刚才的HEX文件，点击“下载/编程”
+![此处输入图片的描述][22]
 
-
-
-
-###4.将你的单片机连接到电脑，再执行以下操作  
-  
-  
-
-
-###5.完成后即可看到你的单片机上的小灯亮了！
+##5.完成后即可看到你的单片机上的小灯亮了！
+# - **这样就完成了整个流程**
 ---
-有任何问题欢迎大家给我发送邮件kenramzes@gmail或779659011@qq.com进行讨论
+##有任何问题欢迎大家给我发送邮件kenramzes@gmail或779659011@qq.com进行讨论
+
+
   [1]: https://pan.baidu.com/s/1eRGEgsM
   [2]: https://baike.baidu.com/item/Dev-C++
-  [3]: https://baike.baidu.com/item/keil/4082184?fr=aladdin
-  [4]: https://baike.baidu.com/item/%E6%B1%87%E7%BC%96%E8%AF%AD%E8%A8%80/61826?fr=aladdin
+  [3]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213172849.jpg
+  [4]: https://baike.baidu.com/item/keil/4082184?fr=aladdin
+  [5]: https://baike.baidu.com/item/%E6%B1%87%E7%BC%96%E8%AF%AD%E8%A8%80/61826?fr=aladdin
+  [6]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213172907.jpg
+  [7]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213172923.jpg
+  [8]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213174645.jpg
+  [9]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181454.jpg
+  [10]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181517.jpg
+  [11]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181541.jpg
+  [12]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181552.jpg
+  [13]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181600.jpg
+  [14]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181652.jpg
+  [15]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181740.jpg
+  [16]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181751.jpg
+  [17]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181830.jpg
+  [18]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181857.jpg
+  [19]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181910.jpg
+  [20]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213181921.jpg
+  [21]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213183217.jpg
+  [22]: https://raw.githubusercontent.com/KenRamzes/MarkdownPhotos/master/Res/QQ%E6%88%AA%E5%9B%BE20171213182009.jpg
