Update and rename 2017-12-10-first-blog.md to 2017-12-10-来之不易的blog.md

--- a/_posts/2017-12-10-来之不易的blog.md
+++ b/_posts/2017-12-10-来之不易的blog.md
@@ -1,8 +1,10 @@
-﻿# 来之不易的blog
-
-firstone 
-
 ---
+layout: post
+title: 来之不易的blog
+key: 20171210
+tags: firstone 自己搭建博客 新手教程 博客
+---
+
    第一次自己建立了一个blog，实属不易，写写自己创建blog的方法，免得以后想要创建blog的小白走弯路（此攻略仅针对小白，大神随意）
    
 
